Add /extension page optimized for VS Code sidebar ads
- New /extension page with vertical ad stack layout
- Dark theme matching VS Code aesthetic
- Multiple ad units for maximum revenue
- Extension sidebar now embeds payless.chat/extension
- Simplified extension code

--- a/extension/package.json
+++ b/extension/package.json
@@ -100,6 +100,11 @@
           "type": "string",
           "default": "",
           "description": "Google AdSense Ad Slot ID for the sidebar"
+        },
+        "payless-ai.extensionPageUrl": {
+          "type": "string",
+          "default": "https://payless.chat/extension",
+          "description": "URL for the extension sidebar page"
         }
       }
     }
